--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "license": "Apache 2.0",
     "dependencies": {
         "@angular/animations": "6.0.4",
+        "@angular/cdk": "6.2.1",
         "@angular/common": "6.0.4",
         "@angular/core": "6.0.4",
         "@angular/forms": "6.0.4",
