--- a/src/hello-world/BUILD.bazel
+++ b/src/hello-world/BUILD.bazel
@@ -1,13 +1,23 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@angular//:index.bzl", "ng_module")
-load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")
+load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary", "sass_library")
 load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")
+
+sass_library(
+    name = "overlay-styles",
+    srcs = [
+        "//:node_modules/@angular/cdk/_overlay.scss",
+    ],
+)
 
 sass_binary(
     name = "hello-world-styles",
     src = "hello-world.component.scss",
-    deps = ["//src/styles:shared"],
+    deps = [
+        ":overlay-styles",
+        "//src/styles:shared",
+    ],
 )
 
 ng_module(
